<resources>
    <string name="app_name">Foody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="food_joke">Joke</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="breakfast">Breakfast</string>
    <string name="snack">Snack</string>
    <string name="dessert">Dessert</string>
    <string name="drink">Drink</string>
    <string name="salad">Salad</string>
    <string name="fingerfood">FingerFood</string>
    <string name="bread">Bread</string>
    <string name="appetizer">Appetizer</string>
    <string name="sauce">Sauce</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favourites">Save to Favourites</string>
    <string name="no_favourite_recipe">No Favourite Recipe</string>
    <string name="no_favourite_recipes">No Favourite Recipes</string>
    <string name="delete_favourite_menu">Delete Favourite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
</resources>