<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardBackgroundColor"
        tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">


        <TextView
            android:id="@+id/mealType_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/meal_type"
            android:textColor="@color/titleColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/mealType_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealType_text">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/mealType_chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/main_course"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/main_course"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/side_dish"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/breakfast"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/snack"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/dessert"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/drink"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drink" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/salad"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/finger_food"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fingerfood" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/bread"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bread" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/appetizer"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sauce"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauce" />
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/dietType_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/diet_type"
            android:textColor="@color/titleColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealType_scrollView" />

        <HorizontalScrollView
            android:id="@+id/dietType_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dietType_text">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/dietType_chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/gluten_free"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/gluten_free"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gluten_free" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ketogenic"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ketogenic" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/vegetarian"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/lacto_vegetarian"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lacto_vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ovo_vegetarian"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ovo_vegetarian" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/Vegan"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegan" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/pescetarian"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pescetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/paleo"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paleo" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/primal"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/primal" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/whole30"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whole30" />
                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dietType_scrollView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>